<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        android:background="@color/colorPrimary">

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="64dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/Theme.AppCompat"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_large"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_now_playing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/now_playing"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/see_more_now_playing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/see_more"
                        android:textColor="@color/colorAccentGreen"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@color/colorPrimaryLight"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_nowplaying"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_large"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/see_more_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/see_more"
                        android:textColor="@color/colorAccentGreen"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@color/colorPrimaryLight"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_large"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_toprated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/top_rated"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/see_more_top_rated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/see_more"
                        android:textColor="@color/colorAccentGreen"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@color/colorPrimaryLight"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_toprated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_large"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_upcoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/see_more_upcoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/see_more"
                        android:textColor="@color/colorAccentGreen"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@color/colorPrimaryLight"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>